--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ function detectVoice() {
 document.getElementById("close-btn").addEventListener("click", () => {
   document.body.classList.add("fade-out");
   setTimeout(() => {
-    window.location.href = "file:///C:/Users/bdeni/OneDrive/Masa%C3%BCst%C3%BC/Quik_App_v2/Quik_html.html";
+    window.location.href = "https://dennisao-sys.github.io/quikai.app/";
   }, 500); // Matches the animation duration (0.5s)
 });
 
